# CatNet-Bot

./: .gitignore  LICENSE  README.md  pyproject.toml
catnetbot/: config_template.toml  main.py  toml_config.py
catnetbot/cogs/: errors.py  ip.py  moderation.py
